force-app/main/default/objects/SharePointDetails__c/SharePointDetails__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SharePointDetails</label>
</CustomObject>