force-app/main/default/objects/SharePointDetails__c/fields/AuthorizationURL__c.field-meta.xml
<CustomField>
    <fullName>AuthorizationURL__c</fullName>
    <label>AuthorizationURL</label>
    <type>Url</type>
</CustomField>