force-app/main/default/objects/SharePointDetails__c/fields/Get_CSV_File_URL__c.field-meta.xml
<CustomField>
    <fullName>Get_CSV_File_URL__c</fullName>
    <label>Get CSV File URL</label>
    <type>Url</type>
</CustomField>