force-app/main/default/objects/SharePointDetails__c/fields/Get_Files_URL__c.field-meta.xml
<CustomField>
    <fullName>Get_Files_URL__c</fullName>
    <label>Get Files URL</label>
    <type>Url</type>
</CustomField>